tests/checker/diagnostics/0011_core_pattern_annotation_mismatch_01.ml
let ((alpha : bool), other_alpha) = (0, 1)
